--- a/app/src/main/res/layout/item_board.xml
+++ b/app/src/main/res/layout/item_board.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+                name="postDetail"
+                type="com.icoo.ssgsag_android.data.model.community.board.CommunityBoardPostDetail" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -46,7 +51,8 @@
                     android:fontFamily="@font/noto_sans_kr_medium"
                     android:textColor="@color/grey_1"
                     android:letterSpacing="-0.02"
-                    tools:text="공모전/대외활동" />
+                    tools:text="공모전/대외활동"
+                    android:text="@{postDetail.category}"/>
         </LinearLayout>
         <LinearLayout
                 android:layout_width="match_parent"
@@ -68,7 +74,8 @@
                         tools:text="센치해 불러본다 친구들"
                         android:layout_marginTop="6dp"
                         android:maxLines="1"
-                        android:ellipsize="end"/>
+                        android:ellipsize="end"
+                        android:text="@{postDetail.title}"/>
 
                 <TextView
                         android:layout_width="match_parent"
@@ -80,7 +87,8 @@
                         android:fontFamily="@font/noto_sans_kr_regular"
                         android:layout_marginTop="4dp"
                         android:maxLines="1"
-                        android:ellipsize="end"/>
+                        android:ellipsize="end"
+                        android:text="@{postDetail.description}"/>
 
                 <LinearLayout
                         android:layout_width="match_parent"
@@ -100,7 +108,8 @@
                             android:textColor="@color/grey_2"
                             android:letterSpacing="-0.02"
                             tools:text="30"
-                            android:layout_marginLeft="2dp"/>
+                            android:layout_marginLeft="2dp"
+                            android:text="@{postDetail.viewCount}"/>
 
                     <ImageView
                             android:layout_width="wrap_content"
@@ -115,7 +124,8 @@
                             android:textColor="@color/grey_2"
                             android:letterSpacing="-0.02"
                             tools:text="30"
-                            android:layout_marginLeft="2dp"/>
+                            android:layout_marginLeft="2dp"
+                            android:text="@{postDetail.commentCount}"/>
 
                     <TextView
                             android:layout_width="wrap_content"
@@ -125,10 +135,8 @@
                             android:textColor="@color/grey_2"
                             android:letterSpacing="-0.02"
                             tools:text="1시간 전"
-                            android:layout_marginLeft="8dp"/>
-
-
-
+                            android:layout_marginLeft="8dp"
+                            android:text="@{postDetail.time}"/>
                 </LinearLayout>
             </LinearLayout>
             <androidx.cardview.widget.CardView
@@ -138,10 +146,12 @@
                     app:cardCornerRadius="4dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:cardElevation="0dp"
-                    app:cardBackgroundColor="@color/grey_4">
+                    app:cardBackgroundColor="@color/grey_4"
+                    cvVisibilityByString="@{postDetail.photoUrl}">
                 <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        glideCenterCrop="@{postDetail.photoUrl}"/>
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
