--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -48,7 +48,7 @@
                 app:layout_constraintBottom_toBottomOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/act_board_post_detail_cl_search"
+                android:id="@+id/act_board_post_detail_cl_menu"
                 android:layout_width="48dp"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -196,7 +196,8 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     app:layout_constraintTop_toBottomOf="@id/act_board_post_detail_ll_post_container"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    glideImg="@{vm.postDetail.photoUrl}"/>
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
