--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -192,6 +192,7 @@
             </LinearLayout>
 
             <ImageView
+                    android:id="@+id/act_board_post_detail_iv_photo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
