--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -85,57 +85,65 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fillViewport="true">
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
                 <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
                         android:id="@+id/act_community_board_asvp"
                         android:layout_width="match_parent"
                         android:layout_height="115dp"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
-
-                <LinearLayout
-                        android:id="@+id/act_community_board_ll_empty"
-                        android:visibility="visible"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center_horizontal"
-                        app:layout_constraintTop_toBottomOf="@id/act_community_board_asvp"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent">
-                    <ImageView
+                        android:background="@color/grey_4"/>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/act_community_board_ll_empty"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal">
+                    <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/img_empty"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="12sp"
-                            android:textColor="@color/grey_1"
-                            android:letterSpacing="-0.02"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:gravity="center_horizontal"
-                            android:layout_marginTop="12dp"
-                            android:text="@string/no_post"
-                            />
-                </LinearLayout>
+                            android:orientation="vertical"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent">
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/img_empty"/>
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="12sp"
+                                android:textColor="@color/grey_1"
+                                android:letterSpacing="-0.02"
+                                android:fontFamily="@font/noto_sans_kr_regular"
+                                android:gravity="center_horizontal"
+                                android:layout_marginTop="12dp"
+                                android:text="@string/no_post"
+                                />
+                    </LinearLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
+                        android:visibility="visible"
                         android:id="@+id/act_community_board_rv"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         tools:listitem="@layout/item_board"
-                        tools:itemCount="8"
+                        tools:itemCount="3"
                         android:background="@color/grey_4"
                         android:overScrollMode="never"
                         android:layout_weight="1"
                         app:layout_constraintTop_toBottomOf="@id/act_community_board_asvp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
     </RelativeLayout>
