--- a/app/src/main/res/layout/fragment_user_notice.xml
+++ b/app/src/main/res/layout/fragment_user_notice.xml
@@ -17,14 +17,20 @@
             android:layout_height="1dp"
             android:background="@color/grey_4"
             app:layout_constraintTop_toBottomOf="@id/frag_user_notice_toolbar"/>
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/frag_user_notice_srl"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/frag_user_notice_v"
+            app:layout_constraintBottom_toBottomOf="parent">
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/frag_user_notice_rv"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             tools:listitem="@layout/item_user_notice"
-            app:layout_constraintTop_toBottomOf="@id/frag_user_notice_v"
-            app:layout_constraintBottom_toBottomOf="parent"
+
             android:overScrollMode="never"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
