--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -302,6 +302,40 @@
                 </LinearLayout>
 
                 <LinearLayout
+                        android:id="@+id/frag_my_page_ll_feedback"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="24dp">
+
+                    <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_report" />
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="12dp"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:text="문의하기"
+                            android:textColor="@color/black_1"
+                            android:textSize="14dp" />
+
+                    <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1" />
+
+                    <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_arrow_next" />
+                </LinearLayout>
+
+
+                <LinearLayout
                             android:id="@+id/frag_my_page_ll_alarm_container"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
