--- a/app/src/main/res/layout/activity_community_feed.xml
+++ b/app/src/main/res/layout/activity_community_feed.xml
@@ -22,6 +22,7 @@
             app:layout_constraintTop_toBottomOf="@id/act_community_feed_toolbar"
             app:layout_constraintStart_toStartOf="parent">
     <androidx.core.widget.NestedScrollView
+            android:id="@+id/act_community_nsv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -81,7 +82,6 @@
 
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
     <ProgressBar
             android:visibility="@{vm.isProgress()}"
             android:layout_width="wrap_content"
@@ -91,5 +91,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <ImageView
+            android:id="@+id/act_community_feed_iv_scroll_to_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bt_scrolltotop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
