--- a/app/src/main/res/layout/activity_community_feed.xml
+++ b/app/src/main/res/layout/activity_community_feed.xml
@@ -82,14 +82,6 @@
 
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-    <ProgressBar
-            android:visibility="@{vm.isProgress()}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <ImageView
@@ -103,6 +95,15 @@
             android:layout_marginBottom="16dp"
             />
 
+    <ProgressBar
+            android:visibility="@{vm.isProgress()}"
+            tools:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
