--- a/app/src/main/res/layout/activity_privacy.xml
+++ b/app/src/main/res/layout/activity_privacy.xml
@@ -38,7 +38,8 @@
             android:layout_height="wrap_content">
 
         <TextView
-                android:text="주식회사 이십사점오(이하 ‘회사’) 개인정보보호법 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보처리방침을 수립․공개합니다.\n\n
+                android:text="
+주식회사 이십사점오(이하 ‘회사’) 개인정보보호법 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보처리방침을 수립․공개합니다.\n\n
 
 제1조(개인정보의 처리목적) 회사는 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 개인정보 보호법 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.\n\n
 
@@ -86,23 +87,23 @@
 
 제8조(개인정보의 안전성 확보조치) 회사는 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.\n1. 관리적 조치 : 내부관리계획 수립․시행, 정기적 직원 교육 등\n2. 기술적 조치 : 개인정보처리시스템 등의 접근권한 관리, 접근통제시스템 설치, 고유식별정보 등의 암호화, 보안프로그램 설치\n\n
 
-제9조(개인정보 자동 수집 장치의 설치∙운영 및 거부에 관한 사항) ① 회사는 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다.\n② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터 내의 저장장치에 저장되기도 합니다.\n가. 쿠키의 사용목적: 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.\n나. 쿠키의 설치∙운영 및 거부 : 웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다.\n다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.\n\n
+제9조(개인정보 자동 수집 장치의 설치∙운영 및 거부에 관한 사항) ① 회사는 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다.\n② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터 내의 저장장치에 저장되기도 합니다.\n가. 쿠키의 사용목적: 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.\n나. 쿠키의 설치∙운영 및 거부 : 웹브라우저 상단의 도구&gt;인터넷 옵션&gt;개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다.\n다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.\n\n
 
 제10조(개인정보 보호책임자) ① 회사는 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n\n
 
-▶ 개인정보 보호책임자\n성명 : 판승현\n직책 : 개발자\n연락처 : <070-8064-2704> <seunghyun.pan@ssgsag.kr>\n※ 개인정보 보호 담당부서로 연결됩니다.\n\n
+▶ 개인정보 보호책임자\n성명 : 판승현\n직책 : 개발자\n연락처 : &lt;070-8064-2704&gt; &lt;seunghyun.pan@ssgsag.kr&gt;\n※ 개인정보 보호 담당부서로 연결됩니다.\n\n
 
-▶ 개인정보 보호 담당부서\n부서명 : 고객센터 팀\n담당자 : 판승현\n연락처 : <070-8064-2704> <seunghyun.pan@ssgsag.kr>\n\n
+▶ 개인정보 보호 담당부서\n부서명 : 고객센터 팀\n담당자 : 판승현\n연락처 : &lt;070-8064-2704&gt; &lt;seunghyun.pan@ssgsag.kr&gt;\n\n
 
 ② 정보주체께서는 회사의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 회사는 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.\n\n
 
 제11조(개인정보 열람청구) 정보주체는 개인정보 보호법 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다. 회사는 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.\n\n
 
-▶ 개인정보 열람청구 접수․처리 부서\n부서명 : 고객센터 팀\n담당자 : 판승현\n연락처 : <070-8064-2704> <seunghyun.pan@ssgsag.kr>\n\n
+▶ 개인정보 열람청구 접수․처리 부서\n부서명 : 고객센터 팀\n담당자 : 판승현\n연락처 : &lt;070-8064-2704&gt; &lt;seunghyun.pan@ssgsag.kr&gt;\n\n
 
 제12조(권익침해 구제방법) 정보주체는 아래의 기관에 대해 개인정보 침해에 대한 피해구제, 상담 등을 문의하실 수 있습니다.\n\n
 
-<아래의 기관은 회사와는 별개의 기관으로서, 회사의 자체적인 개인정보 불만처리, 피해구제 결과에 만족하지 못하시거나 보다 자세한 도움이 필요하시면 문의하여 주시기 바랍니다>\n\n
+&lt;아래의 기관은 회사와는 별개의 기관으로서, 회사의 자체적인 개인정보 불만처리, 피해구제 결과에 만족하지 못하시거나 보다 자세한 도움이 필요하시면 문의하여 주시기 바랍니다&gt;\n\n
 
 ▶ 개인정보 침해신고센터 (한국인터넷진흥원 운영)\n- 소관업무 : 개인정보 침해사실 신고, 상담 신청\n- 홈페이지 : privacy.kisa.or.kr\n- 전화 : (국번없이) 118\n- 주소 : (58324) 전남 나주시 진흥길 9(빛가람동 301-2) 3층 개인정보침해신고센터\n\n
 
